--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,12 @@ release.properties
 pom.xml.*
 
 #Ant
-build.xml
 ant.properties
 local.properties
+
+#Gradle
+.gradle
+build
 
 #Other
 .DS_Store
