--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="ch.citux.twitchdroid"
-      android:versionCode="1"
-      android:versionName="1.0">
+          package="ch.citux.twitchdroid"
+          android:versionCode="1"
+          android:versionName="1.0">
 
     <uses-sdk android:targetSdkVersion="17" android:minSdkVersion="8"/>
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name=".HomeActivity"
-                  android:label="@string/app_name">
+    <application android:label="@string/app_name"
+                 android:icon="@drawable/ic_launcher"
+                 android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
+        <activity android:name=".HomeActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
