--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,5 @@
 
 # Project target.
 target=android-17
+android.library.reference.1=lib/ActionBarSherlock/library
+android.library.reference.2=lib/VitamioBundle
