--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-17
 android.library.reference.1=lib/ActionBarSherlock/library
 android.library.reference.2=lib/VitamioBundle
+android.library.reference.3=lib/DataDroid/DataDroid
