--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include 'lib/ActionBarSherlock/library'
 include 'lib/VitamioBundle'
-include 'lib/VitamioBundle/lib/ZI'
+include 'lib/DataDroid/DataDroid'
