Updated Vitamio First VideoPlayer test Preparations for DataDroid

--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,24 @@
 buildscript {
     repositories {
         mavenCentral()
-        }
-        dependencies {
-            classpath 'com.android.tools.build:gradle:0.2'
-            classpath 'com.google.android:support-v4:r7'
-        }
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:0.2'
+    }
 }
 apply plugin: 'android'
 
+repositories {
+    mavenCentral()
+}
+
 android {
     target = 'android-17'
+    defaultConfig {
+        versionCode = 1
+        versionName = '1.0.0'
+        signingStoreLocation = 'debug.keystore'
+    }
     sourceSets {
         main {
             manifest {
@@ -31,9 +39,14 @@ android {
         }
     }
     dependencies {
-        compile project(":lib/ActionBarSherlock/library")
-        compile project(":lib/ZI")
-        compile project(":lib/VitamioBundle")
-        compile project(":lib/DataDroid/DataDroid")
+        compile project(':lib/ActionBarSherlock/library')
+        compile project(':lib/ZI')
+        compile project(':lib/VitamioBundle')
+        compile project(':lib/DataDroid/DataDroid')
+        compile files('libs/m3u8parser-0.1.jar')
+        compile 'com.google.android:support-v4:r7'
+        compile 'com.google.code.gson:gson:2.2.2'
+        compile 'commons-codec:commons-codec:1.7'
+        compile 'commons-lang:commons-lang:2.6'
     }
 }
