--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,31 +19,35 @@
 
     <application android:label="@string/app_name"
                  android:icon="@drawable/ic_launcher"
+                 android:name=".TwitchDroidApplication"
                  android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
+
         <activity android:name=".ui.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity
                 android:name="io.vov.vitamio.activity.InitActivity"
                 android:configChanges="orientation|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
                 android:launchMode="singleTop"
                 android:theme="@android:style/Theme.NoTitleBar"
                 android:windowSoftInputMode="stateAlwaysHidden"/>
+
         <activity
                 android:name="io.vov.vitamio.activity.VideoActivity"
                 android:configChanges="orientation|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
                 android:launchMode="singleTop"
                 android:process=":vitamio"
                 android:theme="@android:style/Theme.NoTitleBar"
-                android:windowSoftInputMode="stateAlwaysHidden">
-        </activity>
+                android:windowSoftInputMode="stateAlwaysHidden"/>
 
         <service
                 android:name="io.vov.vitamio.activity.PlayerService"
                 android:process=":vitamio"/>
+
     </application>
 
 </manifest>
