--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ android {
         compile project(':lib/ActionBarSherlock/library')
         compile project(':lib/ZI')
         compile project(':lib/VitamioBundle')
-        compile files('libs/jplaylistparser-0.2.1.jar')
+        compile files('libs/m3u8parser.jar')
         compile 'com.google.android:support-v4:r7'
         compile 'com.google.code.gson:gson:2.2.2'
     }
