--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ android {
         compile project(':lib/ZI')
         compile project(':lib/VitamioBundle')
         compile files('libs/m3u8parser.jar')
+        compile files('libs/gson-2.2.2.jar')
         compile 'com.google.android:support-v4:r7'
-        compile 'com.google.code.gson:gson:2.2.2'
     }
 }
