--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
     <application android:label="@string/app_name"
                  android:icon="@drawable/ic_launcher"
-                 android:name=".TwitchDroidApplication"
+                 android:name=".TDApplication"
                  android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
 
         <activity android:name=".ui.HomeActivity">
