--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,9 @@
           android:versionCode="1"
           android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="17"/>
+    <uses-sdk
+            android:minSdkVersion="10"
+            android:targetSdkVersion="17"/>
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -17,12 +19,15 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.GET_TASKS"/>
 
-    <application android:label="@string/app_name"
-                 android:icon="@drawable/ic_launcher"
-                 android:name=".TDApplication"
-                 android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
+    <application
+            android:label="@string/app_name"
+            android:icon="@drawable/ic_launcher"
+            android:name=".TDApplication"
+            android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
 
-        <activity android:name=".ui.TDActivity">
+        <activity
+                android:name=".ui.TDActivity"
+                android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -41,6 +46,7 @@
                 android:configChanges="orientation|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
                 android:launchMode="singleTop"
                 android:process=":vitamio"
+                android:screenOrientation="landscape"
                 android:theme="@android:style/Theme.NoTitleBar"
                 android:windowSoftInputMode="stateAlwaysHidden"/>
 
