--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,6 @@ android {
     defaultConfig {
         versionCode = 1
         versionName = '1.0.0'
-        signingStoreLocation = 'debug.keystore'
     }
     sourceSets {
         main {
@@ -42,8 +41,6 @@ android {
         compile project(':lib/ActionBarSherlock/library')
         compile project(':lib/ZI')
         compile project(':lib/VitamioBundle')
-        compile files('libs/m3u8parser.jar')
-        compile files('libs/gson-2.2.2.jar')
-        compile 'com.google.android:support-v4:r7'
+        compile fileTree(dir: 'libs', include: '*.jar')
     }
 }
