--- a/build.gradle
+++ b/build.gradle
@@ -3,62 +3,25 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.2'
+        classpath 'com.android.tools.build:gradle:0.7.0'
     }
 }
+
 apply plugin: 'android'
 
-targetCompatibility = 1.6
-sourceCompatibility = 1.6
-
-repositories {
-    mavenCentral()
-}
-
 android {
-    target = 'android-17'
-    defaultConfig {
-        versionCode = 1
-        versionName = '1.0.0'
-    }
-    sourceSets {
-        main {
-            manifest {
-                srcFile 'AndroidManifest.xml'
-            }
-            java {
-                srcDir 'src'
-            }
-            res {
-                srcDir 'res'
-            }
-            assets {
-                srcDir 'assets'
-            }
-            resources {
-                srcDir 'src'
-            }
-        }
-    }
-    dependencies {
-        compile project(':lib/ActionBarSherlock/library')
-        compile project(':lib/ZI')
-        compile project(':lib/VitamioBundle')
-        compile files('lib/VitamioBundle/libs/vitamio.jar')
-        compile fileTree(dir: 'libs', include: '*.jar')
-    }
-}
+    compileSdkVersion 19
+    buildToolsVersion "19.0.0"
 
-// https://gist.github.com/khernyo/4226923
-task copyNativeLibs(type: Copy) {
-	from new File(project(':lib/VitamioBundle').projectDir, 'libs')
-	into new File(buildDir, 'native-libs')
-}
- 
-tasks.withType(Compile) { compileTask -> compileTask.dependsOn copyNativeLibs }
- 
-clean.dependsOn 'cleanCopyNativeLibs'
- 
-tasks.withType(com.android.build.gradle.PackageApplicationTask) { pkgTask ->
-	pkgTask.jniDir new File(buildDir, 'native-libs')
+    sourceSets{
+        main {
+            manifest.srcFile 'AndroidManifest.xml'
+            java.srcDirs = ['src']
+            resources.srcDirs = ['src']
+            aidl.srcDirs = ['src']
+            renderscript.srcDirs = ['src']
+            res.srcDirs = ['res']
+            assets.srcDirs = ['assets']
+        } 
+    }
 }
