--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.TD">
 
         <activity
-            android:name="ch.citux.td.ui.TDActivity"
+            android:name=".ui.TDActivity"
             android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,6 +32,20 @@
             android:launchMode="singleTop"
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateAlwaysHidden" />
+
+        <activity android:name=".ui.VitamioPlayerActivity">
+            <intent-filter android:label="@string/app_name">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+                <data android:mimeType="@string/mime_flv" />
+                <data android:host="@string/video_host" />
+            </intent-filter>
+        </activity>
 
     </application>
 
