--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.8.+'
+        classpath 'com.android.tools.build:gradle:0.8.3'
     }
 }
 
@@ -22,12 +22,16 @@ android {
 
     dependencies {
         //Holo
-        compile 'com.android.support:support-v4:19.1.+'
+        compile 'com.android.support:support-v4:19.1.0'
+        compile('com.android.support:mediarouter-v7:19.0.1') {
+            exclude group: 'com.android.support', module: 'appcompat-v7'
+        }
         compile 'org.holoeverywhere:library:2.1.1-SNAPSHOT@aar'
         compile 'org.holoeverywhere:addon-preferences:2.1.1-SNAPSHOT@aar'
 
         //3th Party
         compile 'com.google.code.gson:gson:2.2.4'
+        compile 'com.google.android.gms:play-services:4.2.42'
         compile 'org.apache.commons:commons-lang3:3.2.1'
         compile 'com.squareup.picasso:picasso:2.2.0'
 
