don't reload the favorites every time

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,11 @@ android {
         compile files('libs/m3u8parser.jar')
     }
 
+    lintOptions {
+        //ButterKnife
+        disable 'InvalidPackage'
+    }
+
     if (hasProperty('debugKeystore') && hasProperty('releaseKeystore')) {
         signingConfigs {
             debug {
