--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.9.0'
-        classpath 'com.jakewharton.hugo:hugo-plugin:1.0.1'
+        classpath 'com.android.tools.build:gradle:0.11.+'
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.1.0'
     }
 }
 
@@ -13,7 +13,7 @@ apply plugin: 'hugo'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.3"
+    buildToolsVersion "19.1.0"
 
 
     repositories {
@@ -25,18 +25,18 @@ android {
     dependencies {
         //Holo
         compile 'com.android.support:support-v4:19.2.0'
-        compile('com.android.support:mediarouter-v7:19.0.1') {
-            exclude group: 'com.android.support', module: 'appcompat-v7'
-        }
+//        compile('com.android.support:mediarouter-v7:19.0.1') {
+//            exclude group: 'com.android.support', module: 'appcompat-v7'
+//        }
         compile 'org.holoeverywhere:library:2.1.1-SNAPSHOT@aar'
         compile 'org.holoeverywhere:addon-preferences:2.1.1-SNAPSHOT@aar'
 
         //3th Party
         compile 'com.google.code.gson:gson:2.2.4'
-        compile 'com.google.android.gms:play-services:4.3.23'
+//        compile 'com.google.android.gms:play-services:4.4.52'
         compile 'org.apache.commons:commons-lang3:3.2.1'
-        compile 'com.squareup.picasso:picasso:2.2.0'
-        compile 'com.jakewharton:butterknife:4.0.1'
+        compile 'com.squareup.picasso:picasso:2.3.2'
+        compile 'com.jakewharton:butterknife:5.1.1'
 
         //Jars
         compile files('libs/m3u8parser.jar')
