--- a/build.gradle
+++ b/build.gradle
@@ -3,61 +3,60 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.11.+'
+        classpath 'com.android.tools.build:gradle:0.12.+'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.1.0'
     }
 }
 
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 apply plugin: 'hugo'
+
+repositories {
+    mavenCentral()
+    maven { url 'http://192.241.191.41/repo/' }
+    maven { url 'http://192.241.191.41/snapshot/' }
+}
+
+dependencies {
+    //Holo
+    compile 'com.android.support:support-v4:19.2.0'
+    compile 'org.holoeverywhere:library:2.1.1-SNAPSHOT@aar'
+    compile 'org.holoeverywhere:addon-preferences:2.1.1-SNAPSHOT@aar'
+
+    //3th Party
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'org.apache.commons:commons-lang3:3.2.1'
+    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.jakewharton:butterknife:5.1.1'
+
+    //Jars
+    compile files('libs/m3u8parser.jar')
+}
 
 android {
     compileSdkVersion 19
     buildToolsVersion "19.1.0"
-
-
-    repositories {
-        mavenCentral()
-        maven { url 'http://192.241.191.41/repo/' }
-        maven { url 'http://192.241.191.41/snapshot/' }
-    }
-
-    dependencies {
-        //Holo
-        compile 'com.android.support:support-v4:19.2.0'
-//        compile('com.android.support:mediarouter-v7:19.0.1') {
-//            exclude group: 'com.android.support', module: 'appcompat-v7'
-//        }
-        compile 'org.holoeverywhere:library:2.1.1-SNAPSHOT@aar'
-        compile 'org.holoeverywhere:addon-preferences:2.1.1-SNAPSHOT@aar'
-
-        //3th Party
-        compile 'com.google.code.gson:gson:2.2.4'
-//        compile 'com.google.android.gms:play-services:4.4.52'
-        compile 'org.apache.commons:commons-lang3:3.2.1'
-        compile 'com.squareup.picasso:picasso:2.3.2'
-        compile 'com.jakewharton:butterknife:5.1.1'
-
-        //Jars
-        compile files('libs/m3u8parser.jar')
-    }
 
     lintOptions {
         //ButterKnife
         disable 'InvalidPackage'
     }
 
-    if (hasProperty('debugKeystore') && hasProperty('releaseKeystore')) {
-        signingConfigs {
-            debug {
-                storeFile file(debugKeystore)
-            }
-            release {
-                storeFile file(releaseKeystore)
-                storePassword releaseStorePW
-                keyAlias releaseKeyalias
-                keyPassword releaseKeyPW
-            }
+    signingConfigs {
+        debug {
+            storeFile file(debugKeystore)
+        }
+        release {
+            storeFile file(releaseKeystore)
+            storePassword releaseStorePW
+            keyAlias releaseKeyalias
+            keyPassword releaseKeyPW
+        }
+    }
+
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
         }
     }
 }
