Search for streams

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,22 @@
+/*
+ * Copyright 2013-2014 Paul Stöhr
+ *
+ * This file is part of TD.
+ *
+ * TD is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 buildscript {
     repositories {
         mavenCentral()
@@ -34,12 +53,17 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 20
+    buildToolsVersion "20.0.0"
 
     lintOptions {
         //ButterKnife
         disable 'InvalidPackage'
+    }
+
+    defaultConfig {
+        minSdkVersion 9
+        targetSdkVersion 20
     }
 
     signingConfigs {
