Removed Vitamio again, some devices are not compatible with it

--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,6 @@
 
 
 
-
-
 buildscript {
     repositories {
         mavenCentral()
@@ -57,7 +55,7 @@ dependencies {
     }
 
     //AARs
-    compile(name: 'vitamio-4.2.0-SNAPSHOT', ext: 'aar')
+//    compile(name: 'vitamio-4.2.0-SNAPSHOT', ext: 'aar')
 
     //JARs
     compile fileTree(dir: 'libs', include: '*.jar')
