--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -19,10 +19,9 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
           package="ch.citux.td"
-          android:versionCode="8"
-          android:versionName="0.2.0">
+          android:versionCode="9"
+          android:versionName="0.2.1">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -33,8 +32,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.TD"
-        tools:replace="android:label">
+        android:theme="@style/Theme.TD">
 
         <activity
             android:name=".ui.TDActivity"
