--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.android.support:support-v4:19.2.0'
     compile 'org.holoeverywhere:library:2.1.1-SNAPSHOT@aar'
     compile 'org.holoeverywhere:addon-preferences:2.1.1-SNAPSHOT@aar'
+    compile 'org.holoeverywhere:addon-slider:2.1.1-SNAPSHOT@aar'
 
     //3th Party
     compile 'com.google.code.gson:gson:2.3'
